# AgentTrace

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
configs/: support-bad.yaml  support-v1.yaml  tenants.yaml
docs/: architecture.md  demo-transcript.txt  measured-report.md  measured-results.json
docs/ideation/: 2026-07-12-llm-reliability-control-plane-ideation.md
evals/: escalations.jsonl  policies.json
evals/baselines/: support-v1.json
scripts/: bench.py  demo.py
src/control_plane/: __init__.py  __main__.py  api.py  cache.py  context.py  gateway.py  metrics.py  policies.py  routing.py  schemas.py  settings.py  traces.py
src/control_plane/evals/: __init__.py  dataset.py  gate.py  metrics.py  runner.py
src/control_plane/providers/: __init__.py  base.py  fake.py  openai_compatible.py
tests/: __init__.py  check_m0_contracts.py  check_m1a_stub.py  check_m1b_reliability.py  check_m2a_policies.py  check_m2b_observability.py  check_m3_eval_gate.py  check_m4_portfolio.py  check_openai_compatible.py
