[project]
name = "llm-reliability-control-plane"
version = "0.0.1"
description = "OpenAI-compatible LLM reliability gateway + evaluation release gate"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
  "fastapi>=0.115",
  "httpx>=0.27",
  "uvicorn>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
